added prompt for full name

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
     <script>
         let hometown= prompt("What is your hometown?");
         alert("I am from"  + hometown);
+
+        let firstName = prompt("What is your first name?")
+        let lastName = prompt("What is your last name?")
+        alert(firstName + lastName);
     </script>
   </body>
 </html>
