added prompt for full name

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         let firstName = prompt("What is your first name?")
         let lastName = prompt("What is your last name?")
-        alert(firstName + lastName);
+        alert(firstName + ''+ lastName);
     </script>
   </body>
 </html>
