added prompt for full name

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 
         let firstName = prompt("What is your first name?")
         let lastName = prompt("What is your last name?")
+        /* Another way
+        let fullName = firstName + " " + lastName;
+        alert(fullName); */
         alert(firstName + ''+ lastName);
     </script>
   </body>
