removed less than and changed it to less

--- a/ifstatements.html
+++ b/ifstatements.html
@@ -77,7 +77,7 @@
     <script>
         let age = prompt("How old are you?");
 
-        if(age <= 18){
+        if(age < 18){
             alert("You cannot apply.")
         }
         if(age => 18){
