added js for prompt

--- a/ifelsestatements.html
+++ b/ifelsestatements.html
@@ -1,31 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-   <section>
-      <h1>
-        👩‍💻 She Codes is a Coding Workshop for Women
-      </h1>
-      <h2>
-        Access a new career in Technology
-      </h2>
-      <p>
-        She Codes teaches coding, design and management skills to women
-        <br />
-        <strong>
-          Limited amount of spots!
-        </strong>
-      </p>
-      <br />
-      <button>
-        Apply Now
-      </button>
-    </section> 
-    <script></script>
-</body>
-</html>
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>If else Statements</title>
+        </head>
+        <body>
+        <section>
+            <h1>
+                👩‍💻 She Codes is a Coding Workshop for Women
+            </h1>
+            <h2>
+                Access a new career in Technology
+            </h2>
+            <p>
+                She Codes teaches coding, design and management skills to women
+                <br />
+                <strong>
+                Limited amount of spots!
+                </strong>
+            </p>
+            <br />
+            <button>
+                Apply Now
+            </button>
+            </section> 
+            <script>
+            /* Ask for the current hour: (i.e 14)
+             If it’s before 12, alert Good morning,
+             If it’s after 18, Good evening
+            If it's between 12 and 18 Good afternoon
+            */
+           let currentHour= prompt("What is the current hour?");
+                    // alert(currentHour);
+                if(currentHour< 12){
+                    alert("Good Morning");
+                }
+                if(currentHour > 12 || currentHour >18){
+                    alert("Good Afternoon");
+                }
+                else{
+                    alert("👋👋");
+                }
+            </script>
+        </body>
+        </html>
