--- a/ifelsestatements.html
+++ b/ifelsestatements.html
@@ -37,9 +37,12 @@
                 if(currentHour< 12){
                     alert("Good Morning");
                 }
-                if(currentHour > 12 || currentHour >18){
-                    alert("Good Afternoon");
-                }
+            //  else if(currentHour > 12 || currentHour > 18){
+            //         alert("Good Afternoon");
+                // }
+                 else if(ccurrentHour > 18){
+                    alert("Good Evening");
+                 }
                 else{
                     alert("👋👋");
                 }
