--- a/ifelsestatements.html
+++ b/ifelsestatements.html
@@ -40,11 +40,11 @@
             //  else if(currentHour > 12 || currentHour > 18){
             //         alert("Good Afternoon");
                 // }
-                 else if(ccurrentHour > 18){
+                 else if(currentHour > 18){
                     alert("Good Evening");
                  }
                 else{
-                    alert("👋👋");
+                    alert("Good Afternoon");
                 }
             </script>
         </body>
