Added celcius to degree

--- a/weatherapp.html
+++ b/weatherapp.html
@@ -79,7 +79,7 @@
     <h1>
       🌤
       <br />
-      Currently 21° in Tokyo
+      Currently 21 °C in Tokyo
     </h1>
     <h2>13° / <strong>23°</strong></h2>
     <ul>
@@ -127,10 +127,10 @@
             let temperature= prompt(' What is the temperature?');
 
             if(temp => 20){
-                updateHeading(`😊Currently ${temperature}° in ${city} `);
+                updateHeading(`😊Currently ${temperature} °C in ${city} `);
             }
             if(temp < -10 || temp <= 0){
-                updateHeading(`😒Currently ${temperature}° in ${city} `)
+                updateHeading(`😒Currently ${temperature} °C in ${city} `)
             }
         
         }
