--- a/weatherapp.html
+++ b/weatherapp.html
@@ -64,7 +64,7 @@
         padding: 16px 24px;
         border-radius: 30px;
         transition: all 200ms ease;
-        box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
+        box-shadow: rgba(89, 37, 72, 0.08) 0px 8px 8px 0;
         cursor: pointer;
       }
 
@@ -107,7 +107,7 @@
       Change city
     </button>
     <p>
-      Coded by Matt Delac
+      Coded by Kimberly Suares
     </p>
     <script>
         /* 1.What city do you live in?
