removed code in else statement

--- a/shecodes-wk-3/prompt.html
+++ b/shecodes-wk-3/prompt.html
@@ -12,7 +12,7 @@
        if(firstName !== ""){
          alert("Welcome,"+ firstName);
        }
-    else{(firstName.length === "")
+    else{
         alert("Too bad for you");
     }
     
